2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : ReplaceSelf() should allow document fragment.
	  Moved implementation to XPathEditableDocument.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : PrependChild() should use AppendChild() when
	  there is no child.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : InsertAfter() should raise an error before
	  MoveToNext() when current node is either attribute or namespace.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : InsertAfter() should append children after it
	  once moved to parent. This method shoulr raise an error when it is
	  placed on Root.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : (CreateFragmentReader) return XmlReader that
	  considers current namespace contexts.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : removed some MonoTODOs.

2005-12-08  Atsushi Enomoto <atsushi@ximian.com>

	* XPathDocument.cs : garbage cleanup.

2005-11-23  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Iterator.cs: fixed UnionIterator.SetCurrent method, the
	navigators may be from different xml files.

2005-11-23  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Iterator.cs: fixed SimpleSlashIterator.MoveNextCore method, the
	navigators may be from different xml files.

2005-11-10  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs, XPathNodeIterator.cs :
	  [DebuggerDisplay] are not worthy of existing.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs, XPathNodeIterator.cs : DebuggerDisplayAttribute
	  values are fixed. However, they totally do not make sense since
	  there is no DebuggerDisplayProxy type in our impl.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XPathException.cs : Message property is back in 2.0 RTM.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>
