@@ -1,5 +1,9 @@
 2005-12-13  Atsushi Enomoto <atsushi@ximian.com>
 
+	* XPathEditableNavigatorTests.cs : added tests for MoveToFollowing().
+
+2005-12-13  Atsushi Enomoto <atsushi@ximian.com>
+
 	* XPathEditableNavigatorTests.cs : added tests that passes empty
 	  string to editor methods. Added tests for ReplaceSelf().
 
